# aurora-terminal

./: CMakeLists.txt  README.md
resources/: aurora-terminal.desktop
src/: about.cpp  main.cpp  mainwindow.cpp  shorcuts.cpp  terminalwidget.cpp
src/include/: about.h  mainwindow.h  shortcuts.h  terminalwidget.h
